--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jest": "^24.5.0",
     "mockgoose": "^8.0.1",
     "redis-mock": "0.43.0",
-    "sinon": "^7.2.7"
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "bluebird": "^3.5.3",
