--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jest": "^22.4.1",
     "jest": "^24.5.0",
-    "mockgoose": "^8.0.1",
     "redis-mock": "0.43.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "uuid": "^3.3.2"
   },
   "dependencies": {
     "bluebird": "^3.5.3",
