--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,10 @@ services:
             - REDIS_DB_URL=redis://redisdb
             - MONGO_DB_URI=mongodb://mongodb/spacecom
             - SOURCE_FILE_PATH=./gates.txt
+            - API_PORT=${API_PORT:-3000}
         command: "npm start"
         ports:
-            - 3000:3000
+            - ${API_PORT:-3000}:${API_PORT:-3000}
         links:
             - mongodb
             - redisdb
