[dsch] get redis silent and ToC in README

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,7 +9,7 @@ services:
         build: .
         environment:
             - DOCKER_TEST=true
-        command: "npm test"
+        command: npm test
         links:
             - mongodb
         depends_on:
