--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,15 @@ version: '3'
 services:
     redisdb:
         image: redis:latest
+        command: redis-server --logfile /dev/null # --quiet
+        volumes:
+            - redisdb-data:/data
         ports:
             - 6379
     mongodb:
         image: mongo:latest
-        environment:
-            - MONGO_DATA_DIR=/data/db
-            - MONGO_LOG_DIR=/dev/null
         volumes:
-            - ./data/db:/data/db
+            - mongodb-data:/data/db
         ports:
             - 27017
         command: mongod --smallfiles --logpath=/dev/null # --quiet
@@ -21,7 +21,7 @@ services:
             - MONGO_DB_URI=mongodb://mongodb/spacecom
             - SOURCE_FILE_PATH=./gates.txt
             - API_PORT=${API_PORT:-3000}
-        command: "npm start"
+        command: npm start
         ports:
             - ${API_PORT:-3000}:${API_PORT:-3000}
         links:
@@ -30,3 +30,7 @@ services:
         depends_on:
             - mongodb
             - redisdb
+
+volumes:
+  mongodb-data:
+  redisdb-data:
